package ar.org.hospitalcuencaalta.servicio_consultas;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication(scanBasePackages = "ar.org.hospitalcuencaalta")
public class ServicioConsultasApplication {

    public static void main(String[] args) {
        SpringApplication.run(ServicioConsultasApplication.class, args);
    }

}
