package ar.org.hospitalcuencaalta.servicio_consultas.repositorio;

import ar.org.hospitalcuencaalta.servicio_consultas.proyecciones.*;
import org.springframework.data.jpa.repository.JpaRepository;

public interface EmpleadoProjectionRepository extends JpaRepository<EmpleadoProjection,Long> {}
