@startuml
package "servicio-consultas" {
  class ServicioConsultasApplication
  class ContratoEventListener
  class EmpleadoEventListener
  class ContratoProjectionRepository
  class EmpleadoProjectionRepository
  ServicioConsultasApplication --> ContratoEventListener
  ServicioConsultasApplication --> EmpleadoEventListener
  ContratoEventListener --> ContratoProjectionRepository
  EmpleadoEventListener --> EmpleadoProjectionRepository
}
@enduml
